--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "react-video-browser",
   "version": "1.0.0",
   "description": "Simple React app",
   "main": "index.js",
@@ -11,10 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.11.1",
+    "bootstrap": "^3.3.6",
     "express": "^4.13.4",
+    "lodash": "^4.13.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.0.0",
+    "redux": "^3.5.2",
+    "youtube-api-search": "0.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -39,5 +44,13 @@
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/plaffey/react-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/plaffey/react-boilerplate/issues"
+  },
+  "homepage": "https://github.com/plaffey/react-boilerplate#readme"
 }
